--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run"
   },
   "eslintConfig": {
     "extends": [
@@ -43,7 +45,8 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^9.5.2",
+    "@testing-library/cypress": "^8.0.2",
+    "cypress": "^9.5.3",
     "gh-pages": "^3.2.3"
   }
 }
