--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://tahseenio.github.io/movie-search-react",
   "name": "movie-search-react",
   "version": "0.1.0",
   "private": true,
@@ -51,7 +50,6 @@
   },
   "devDependencies": {
     "@testing-library/cypress": "^8.0.2",
-    "cypress": "^9.5.3",
-    "gh-pages": "^3.2.3"
+    "cypress": "^9.5.3"
   }
 }
